--- a/src/components/asideNavFiles/asideNav.html
+++ b/src/components/asideNavFiles/asideNav.html
@@ -22,7 +22,8 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <router-link class="nav-link" to="/payments">
+        <!-- <a class="nav-link" href="#"> -->
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
             stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users">
             <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
@@ -30,8 +31,9 @@
             <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
             <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
           </svg>
-          Customers
-        </a>
+          Payments
+        <!-- </a> -->
+      </router-link>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">
