--- a/src/components/asideNavFiles/asideNav.html
+++ b/src/components/asideNavFiles/asideNav.html
@@ -60,7 +60,7 @@
     </ul>
 
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-      <span>Saved reports</span>
+      <span>NH Addresses</span>
       <a class="d-flex align-items-center text-muted" href="#">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
           stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus-circle">
@@ -70,6 +70,7 @@
         </svg>
       </a>
     </h6>
+    <!-- Todo render this from the vuex saved addresses -->
     <ul class="nav flex-column mb-2">
       <li class="nav-item">
         <a class="nav-link" href="#">
@@ -81,7 +82,7 @@
             <line x1="16" y1="17" x2="8" y2="17"></line>
             <polyline points="10 9 9 9 8 9"></polyline>
           </svg>
-          Current month
+          address
         </a>
       </li>
     </ul>
