--- a/src/components/landingFiles/landing.html
+++ b/src/components/landingFiles/landing.html
@@ -11,8 +11,8 @@
   </div>
   <div class="container-fluid">
 
-    <div class="row">
-      <aside-nav class="col-md-2 d-none d-md-block bg-light sidebar"></aside-nav>
+    <div class="row mt-2">
+      <aside-nav class="col-md-2 d-none mt-2 d-md-block sidebar"></aside-nav>
 
       <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
         <div class="chartjs-size-monitor" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;">
