--- a/src/components/addAddressFiles/addAddress.html
+++ b/src/components/addAddressFiles/addAddress.html
@@ -2,17 +2,28 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Add New NiceHash Address</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                ...
+                <form>
+                    <div class="row">
+                        <div class="col">
+                            <input type="text" class="form-control" v-model="userNHAddressName" placeholder="Name for address">
+                        </div>
+                        <div class="col">
+                            <input type="text" class="form-control" v-model="userNHAddress" placeholder="Nicehash Address Data">
+                        </div>
+                    </div>
+                </form>
+
             </div>
+
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-primary" @click="getNHAddressData">Save Address</button>
             </div>
         </div>
     </div>
