Adds addresses to vuex

--- a/src/components/asideNavFiles/asideNav.html
+++ b/src/components/asideNavFiles/asideNav.html
@@ -48,29 +48,28 @@
         </router-link>
       </li>
       <li class="nav-item">
-          <router-link class="nav-link" to="/contact">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-              stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file">
-              <path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path>
-              <polyline points="13 2 13 9 20 9"></polyline>
-            </svg>
-            Contact
-          </router-link>
-        </li>
+        <router-link class="nav-link" to="/contact">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file">
+            <path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path>
+            <polyline points="13 2 13 9 20 9"></polyline>
+          </svg>
+          Contact
+        </router-link>
+      </li>
+      <li class="nav-item">
+        <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#exampleModal">
+          +
+        </button>
+        <add-address></add-address>
+      </li>
     </ul>
 
-    <div class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-      <span>NH Addresses</span>
-      <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#exampleModal">
-        +
-      </button>
-      <add-address></add-address>
-
-    </div>
     <!-- Todo render this from the vuex saved addresses -->
-    <ul class="nav flex-column mb-2" v-for="address in NHAddresses" :key="address.id">
+    <!--Todo  Make a collapsable  dropdown -->
+    <ul class="nav flex-column mt-1" v-for="address in $store.state.NHAddresses" :key="address.id">
       <li class="nav-item">
-        {{address}}
+        {{address.name}}
       </li>
     </ul>
   </div>
