--- a/src/components/dashboardFiles/dashboard.html
+++ b/src/components/dashboardFiles/dashboard.html
@@ -1,10 +1,12 @@
-<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-  <h1 class="h2">Dashboard</h1>
+<div class="border-bottom">
+  <h1 class="h2">Profitability</h1>
   <!-- 
   Follows mining currencies from nicehash
   Profits
   Adjust Electricity Bill Todo Learn how to calculate electricity
   -->
+<!--  -->
+
   <div class="btn-toolbar mb-2 mb-md-0">
     <div class="btn-group mr-2">
       <button class="btn btn-sm btn-outline-secondary">Share</button>
@@ -21,4 +23,9 @@
       This week
     </button>
   </div>
+
+    <!-- stats.provider.ex -->
+  <!-- <line-chart :data="chartData" :options="chartOptions"></line-chart> -->
+
+  
 </div>
