--- a/src/components/compareFiles/compare.html
+++ b/src/components/compareFiles/compare.html
@@ -1,8 +1,10 @@
 <div class="container">
     <!-- https://startbootstrap.com/template-overviews/sb-admin-2/ -->
-    <h1>Hi</h1>
-    <button @click="toggleData">toggleData</button>
+    <h1>Profit</h1>
+    <!-- Todo make a way to add new input fields with reactive data that lets the user enter as many addresses as they want -->
     <!-- Todo delete local data from line chart and import it using props -->
-    <line-chart :chartData="userData" options="{responsive: false, maintainAspectRatio: false}" :currentBITPriceNum="currentBITPriceNum"
-        :userNHAddress="userNHAddress" :width="400" :height="200"></line-chart>
+    <div class="container-fluid" v-if="dataLoaded">
+        <line-chart :chartData="userData" :options="{responsive: false, maintainAspectRatio: true}" :width="200"
+            :height="100"></line-chart>
+    </div>
 </div>
