--- a/src/components/workersFiles/workers.html
+++ b/src/components/workersFiles/workers.html
@@ -28,7 +28,7 @@
 
 
           <td>{{ worker[1].a }}</td>
-          <!-- if not exist return something -->
+          <!-- if not exist return 0 -->
           <td>{{ worker[1].rs }}</td>
           <!-- Configure for which algorithim -->
           <td> {{ worker[6] }} </td>
