--- a/src/components/navbarFiles/navbar.html
+++ b/src/components/navbarFiles/navbar.html
@@ -25,13 +25,13 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
+    </ul>
+
+    <ul class="ml-auto navbar-nav">
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        {{ $store.state.currentBITPriceSee }} USD
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+
   </div>
 </nav>
