--- a/src/components/asideNavFiles/asideNav.html
+++ b/src/components/asideNavFiles/asideNav.html
@@ -68,9 +68,11 @@
     <!-- Todo render this from the vuex saved addresses -->
     <!--Todo  Make a collapsable  dropdown -->
     <ul class="nav flex-column mt-1" v-for="address in $store.state.NHAddresses" :key="address.id">
+      <!-- if selected addr exist execute this -->
+      <!-- :class="{'text-primary': address.name == $store.state.selectedAddr.name }" -->
       <li class="nav-item">
         <span @click="$store.commit('removeNHAddress', address)">-</span>
-        
+
         <span @click="$store.commit('changeSelectedAddr', address)">
           {{address.name}}
         </span>
