--- a/src/components/navbarFiles/navbar.html
+++ b/src/components/navbarFiles/navbar.html
@@ -17,7 +17,8 @@
 
     <ul class="ml-auto navbar-nav">
       <li class="nav-item">
-        {{ $store.state.currentBITPriceSee }} USD
+        <a class="nav-link active" href="https://www.coindesk.com/"> {{ $store.state.currentBITPriceSee }} USD
+        </a>
       </li>
     </ul>
 
