--- a/src/components/navbarFiles/navbar.html
+++ b/src/components/navbarFiles/navbar.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Nice-Data</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -8,19 +8,44 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#"><span class="sr-only">(current)</span></a>
       </li>
     </ul>
-
-    <ul class="ml-auto navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link active" href="https://www.coindesk.com/"> {{ $store.state.currentBITPriceSee }} USD
-        </a>
-      </li>
+    <ul class="ml-auto navbar-nav mr-1">
+      <li class="nav-item active"><a class="nav-link" href="https://www.coindesk.com/">
+          {{currentBITPrice }}</a></li>
     </ul>
+    <!-- Todo that thing later -->
+    <!-- 
+    <ul class="ml-auto navbar-nav mr-1">
+      <li class="nav-item mr-5">
+        <div class="dropleft">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            $
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="https://www.coindesk.com/">BIT: {{ $store.state.currentBITPriceSee }} USD</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </div>
+      </li>
+      <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+              <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
+          </a>
+          <ul class="dropdown-menu dropdown-user">
+              <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
+              </li>
+              <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
+              </li>
+              <li class="divider"></li>
+              <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+              </li>
+          </ul>
+      </li>
+    </ul> -->
 
   </div>
 </nav>
